# CodeGuidelines

./: .gitignore  .readthedocs.yaml  Makefile  package-lock.json  package.json  pyproject.toml  requirements.txt
source/: approved-stacks.md  async-debounce.md  big-query-exports.md  bugs.md  build-lifecycle.md  code-formatting.md  common-pitfalls.md  conf.py  dependencies-management.md  documentation.md  eval.md  exceptions.md  frameworks-setup.md  functional-thinking.md  gtm.md  index.md  monthly-maintenance.md  nasa10.md  optimization.md  reactivity.html  silicon-valley.html  testing.md  version-control.md  warnings.md
source/_static/: reactivity-iframe.html  silicon-valley-indents-iframe.html
