[tool.poetry]
name = "code-guidelines"
version = "0.1.0"
description = ""
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^4.1.2"
myst-parser = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
